guia-7 completo ej-6-iv, agrego ej-8-ii y enunciado ej-20

--- a/7-guia/ejercicios-7/ej-20-7.tex
+++ b/7-guia/ejercicios-7/ej-20-7.tex
@@ -1,1 +1,6 @@
-\ejercicio\hacer
+\begin{enunciado}{\ejercicio}
+	Sea $f = X^{68} - 17X^4 - 16 \in \complejos[X]$. Determinar la forma binomial de cada raiz multiple
+    de $f$ en $\complejos$ y la multiplicidad de cada una de ellas. 
+\end{enunciado}
+
+\hacer
