--- a/7-guia/ejercicios-7/ej-32-7.tex
+++ b/7-guia/ejercicios-7/ej-32-7.tex
@@ -86,7 +86,7 @@ $$
 $$
 Por lo tanto $p(k+1)$ resultó verdadera.
 
-Como $p(1), p{h}\ytext p(h+1)$ resultaron verdaderas por principio de inducción en $n$ también lo es $p(n) \paratodo n \en \naturales$.
+Como $p(1), p(h)\ytext p(h+1)$ resultaron verdaderas por principio de inducción en $n$ también lo es $p(n) \paratodo n \en \naturales$.
 
 \begin{aportes}
   \item \aporte{\dirRepo}{naD GarRaz \github}
