add guia-5 ej26, ej27, ej28-1, ej29, ej30

--- a/5-guia/ejercicios-5/ej-26-5.tex
+++ b/5-guia/ejercicios-5/ej-26-5.tex
@@ -1,1 +1,87 @@
-\ejercicio\hacer
+\begin{enunciado}{\ejercicio}
+Escribir las tablas de suma y producto en $\enteros/m\enteros$ para $m=5$ y $8$. Alguno de estos anillos es un cuerpo?
+\end{enunciado}
+
+
+\begin{center}
+\textbf{$\enteros/5\enteros$}
+\end{center}
+
+
+\vspace{0.3cm}
+
+\noindent
+\begin{minipage}{0.48\textwidth}
+\[
+\begin{array}{c|ccccc}
++ & \bar{0} & \bar{1} & \bar{2} & \bar{3} & \bar{4} \\
+\hline
+\bar{0} & \bar{0} & \bar{1} & \bar{2} & \bar{3} & \bar{4} \\
+\bar{1} & \bar{1} & \bar{2} & \bar{3} & \bar{4} & \bar{0} \\
+\bar{2} & \bar{2} & \bar{3} & \bar{4} & \bar{0} & \bar{1} \\
+\bar{3} & \bar{3} & \bar{4} & \bar{0} & \bar{1} & \bar{2} \\
+\bar{4} & \bar{4} & \bar{0} & \bar{1} & \bar{2} & \bar{3} \\
+\end{array}
+\]
+\end{minipage}%
+\hfill
+\begin{minipage}{0.48\textwidth}
+\[
+\begin{array}{c|ccccc}
+\times & \bar{0} & \bar{1} & \bar{2} & \bar{3} & \bar{4} \\
+\hline
+\bar{0} & \bar{0} & \bar{0} & \bar{0} & \bar{0} & \bar{0} \\
+\bar{1} & \bar{0} & \bar{1} & \bar{2} & \bar{3} & \bar{4} \\
+\bar{2} & \bar{0} & \bar{2} & \bar{4} & \bar{1} & \bar{3} \\
+\bar{3} & \bar{0} & \bar{3} & \bar{1} & \bar{4} & \bar{2} \\
+\bar{4} & \bar{0} & \bar{4} & \bar{3} & \bar{2} & \bar{1} \\
+\end{array}
+\]
+\end{minipage}
+
+\vspace{1cm}
+
+\begin{center}
+\textbf{$\enteros/8\enteros$}
+\end{center}
+
+\vspace{0.3cm}
+
+\noindent
+\begin{minipage}{0.48\textwidth}
+\[
+\begin{array}{c|cccccccc}
++ & \bar{0} & \bar{1} & \bar{2} & \bar{3} & \bar{4} & \bar{5} & \bar{6} & \bar{7} \\
+\hline
+\bar{0} & \bar{0} & \bar{1} & \bar{2} & \bar{3} & \bar{4} & \bar{5} & \bar{6} & \bar{7} \\
+\bar{1} & \bar{1} & \bar{2} & \bar{3} & \bar{4} & \bar{5} & \bar{6} & \bar{7} & \bar{0} \\
+\bar{2} & \bar{2} & \bar{3} & \bar{4} & \bar{5} & \bar{6} & \bar{7} & \bar{0} & \bar{1} \\
+\bar{3} & \bar{3} & \bar{4} & \bar{5} & \bar{6} & \bar{7} & \bar{0} & \bar{1} & \bar{2} \\
+\bar{4} & \bar{4} & \bar{5} & \bar{6} & \bar{7} & \bar{0} & \bar{1} & \bar{2} & \bar{3} \\
+\bar{5} & \bar{5} & \bar{6} & \bar{7} & \bar{0} & \bar{1} & \bar{2} & \bar{3} & \bar{4} \\
+\bar{6} & \bar{6} & \bar{7} & \bar{0} & \bar{1} & \bar{2} & \bar{3} & \bar{4} & \bar{5} \\
+\bar{7} & \bar{7} & \bar{0} & \bar{1} & \bar{2} & \bar{3} & \bar{4} & \bar{5} & \bar{6} \\
+\end{array}
+\]
+\end{minipage}%
+\hfill
+\begin{minipage}{0.48\textwidth}
+\[
+\begin{array}{c|cccccccc}
+\times & \bar{0} & \bar{1} & \bar{2} & \bar{3} & \bar{4} & \bar{5} & \bar{6} & \bar{7} \\
+\hline
+\bar{0} & \bar{0} & \bar{0} & \bar{0} & \bar{0} & \bar{0} & \bar{0} & \bar{0} & \bar{0} \\
+\bar{1} & \bar{0} & \bar{1} & \bar{2} & \bar{3} & \bar{4} & \bar{5} & \bar{6} & \bar{7} \\
+\bar{2} & \bar{0} & \bar{2} & \bar{4} & \bar{6} & \bar{0} & \bar{2} & \bar{4} & \bar{6} \\
+\bar{3} & \bar{0} & \bar{3} & \bar{6} & \bar{1} & \bar{4} & \bar{7} & \bar{2} & \bar{5} \\
+\bar{4} & \bar{0} & \bar{4} & \bar{0} & \bar{4} & \bar{0} & \bar{4} & \bar{0} & \bar{4} \\
+\bar{5} & \bar{0} & \bar{5} & \bar{2} & \bar{7} & \bar{4} & \bar{1} & \bar{6} & \bar{3} \\
+\bar{6} & \bar{0} & \bar{6} & \bar{4} & \bar{2} & \bar{0} & \bar{6} & \bar{4} & \bar{2} \\
+\bar{7} & \bar{0} & \bar{7} & \bar{6} & \bar{5} & \bar{4} & \bar{3} & \bar{2} & \bar{1} \\
+\end{array}
+\]
+\end{minipage}
+
+\begin{aportes}
+    \item \aporte{https://github.com/sigfripro}{sigfripro \github}
+\end{aportes}
